feat: color panel

--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -19,12 +19,8 @@ $INDIGO: #5856d6;
 $PURPLE: #af52de;
 $PINK: #ff2d55;
 
-$BIG_TITLE: #1f315b;
-$TASKS_TITLE: #8f99bf;
-$TASK_ITEM_TITLE: #4f566f;
-
-$FS_MAIN_YELLOW: #ffd42d;
-$FS_MAIN_GRAY: #e1eaf1;
-$FS_SECOND_GRAY: #ededed;
-$FS_SECOND_YELLOW: #fffae9;
-$FS_MAIN_BROWN: #5e5b31;
+$VEGAN_KOREA: #6762f5;
+$VEGAN_CHINA: #7af562;
+$VEGAN_CAFE: #f4de62;
+$VEGAN_RESTAURANT: #f59562;
+$VEGAN_ETC: #f46278;
