--- a/src/routes/StoreList/storeList.module.scss
+++ b/src/routes/StoreList/storeList.module.scss
@@ -6,4 +6,13 @@
     font-size: 24px;
     text-transform: uppercase;
   }
+
+  .storeCards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-auto-rows: minmax(100px, auto);
+    align-items: center;
+    justify-items: center;
+    margin-top: 20px;
+  }
 }
