--- a/src/routes/StoreList/ColorPanel/colorPanel.module.scss
+++ b/src/routes/StoreList/ColorPanel/colorPanel.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  min-width: 360px;
   height: 50px;
   margin: 20px auto;
   background: #f2fbff;
