--- a/src/components/StoreItem/storeItem.module.scss
+++ b/src/components/StoreItem/storeItem.module.scss
@@ -8,7 +8,7 @@
   width: 90%;
   min-width: 320px;
   min-height: 120px;
-  background: linear-gradient(180deg, colors.$VEGAN_CARD_BG 40%, colors.$WHITE 40%);
+  background: linear-gradient(180deg, colors.$VEGAN_CARD_BG 30%, colors.$WHITE 30%);
   border-radius: 8px;
 
   .imgWrapper {
@@ -32,9 +32,20 @@
     text-align: left;
 
     .linkBlock {
-      margin-top: 10px;
+      margin-top: 20px;
       margin-right: 10px;
       text-align: end;
+
+      a {
+        padding: 3px 15px;
+        color: colors.$VEGAN_CARD_BG;
+        background: colors.$BLACK;
+        border-radius: 4px;
+
+        &:visited {
+          color: colors.$VEGAN_CARD_BG;
+        }
+      }
     }
 
     span {
