--- a/src/routes/StoreList/storeList.module.scss
+++ b/src/routes/StoreList/storeList.module.scss
@@ -1,9 +1,9 @@
 .underMap {
-  min-width: 360px;
+  min-width: 320px;
   padding: 20px;
 
   h1 {
-    margin-bottom: 10px;
+    margin: 10px 0;
     font-size: 24px;
     text-transform: uppercase;
   }
@@ -11,7 +11,7 @@
   .storeCards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(130px, auto);
     align-items: center;
     justify-items: center;
     margin-top: 20px;
