--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -25,4 +25,6 @@ $VEGAN_CAFE: #f4de62;
 $VEGAN_RESTAURANT: #f59562;
 $VEGAN_ETC: #f46278;
 
+$VEGAN_BTN_BG: #f0f8ff;
 $VEGAN_CARD_BG: #dedcff;
+$VEGAN_CARD_DARK: #9d98ff;
