--- a/src/routes/Detail/detail.module.scss
+++ b/src/routes/Detail/detail.module.scss
@@ -30,7 +30,11 @@
       border-top-right-radius: 8px;
 
       h1 {
-        width: 80%;
+        margin-right: 50px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-all;
+        white-space: nowrap;
       }
 
       button {
@@ -48,21 +52,21 @@
         transform: translate(-50%, -50%);
 
         &:active {
-          transform: translate(-61%, -43%);
+          transform: translate(-42%, -42%);
         }
       }
 
       &::after {
         position: absolute;
-        top: 26px;
-        right: 24px;
+        top: 0;
+        right: 0;
         z-index: 0;
         width: 40px;
         height: 40px;
         content: '';
         background: colors.$GRAYA;
         border-radius: 8px;
-        // transform: translate(0, -82%);
+        transform: translate(-42%, 30%);
       }
     }
 
