--- a/src/routes/StoreList/ColorPanel/colorPanel.module.scss
+++ b/src/routes/StoreList/ColorPanel/colorPanel.module.scss
@@ -6,13 +6,14 @@
   justify-content: space-evenly;
   min-width: 320px;
   height: 50px;
+  pointer-events: none;
+  user-select: none;
   background: colors.$GRAYE;
 
   li:first-child {
     position: relative;
 
     span {
-      // position: absolute;
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -25,7 +26,6 @@
     position: relative;
 
     span {
-      // position: absolute;
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -38,7 +38,6 @@
     position: relative;
 
     span {
-      // position: absolute;
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -51,7 +50,6 @@
     position: relative;
 
     span {
-      // position: absolute;
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -64,7 +62,6 @@
     position: relative;
 
     span {
-      // position: absolute;
       display: inline-block;
       width: 10px;
       height: 10px;
