--- a/src/routes/Main/main.module.scss
+++ b/src/routes/Main/main.module.scss
@@ -3,6 +3,7 @@
 .mainBlock {
   h1 {
     display: inline-block;
+    margin-top: 10px;
     font-size: 24px;
     font-weight: 700;
   }
@@ -21,11 +22,8 @@
   }
 
   .infoWrapper {
-    // display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
-    grid-auto-rows: minmax(50px, auto);
-    align-items: center;
-    justify-items: center;
+    width: 75%;
+    min-width: 320px;
     margin: 0 auto;
   }
 }
