--- a/src/components/DietModal/dietModal.module.scss
+++ b/src/components/DietModal/dietModal.module.scss
@@ -1,16 +1,32 @@
+@keyframes imgGoUp {
+  0% {
+    transform: translate(-50%, -48%);
+  }
+
+  100% {
+    transform: translate(-50%, -50%);
+  }
+}
+
 .imgWrapper {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 50%);
+  backdrop-filter: blur(3px);
 
   img {
     position: relative;
     top: 50%;
     left: 50%;
     width: 70%;
+    min-width: 280px;
+    max-width: 900px;
     height: 70%;
+    max-height: 1000px;
+    transition: all cubic-bezier(0.4, 0, 0, 1.5);
     transform: translate(-50%, -50%);
+    animation: imgGoUp 0.2s forwards ease-out;
   }
 }
