--- a/src/components/InfoBlock/infoBlock.module.scss
+++ b/src/components/InfoBlock/infoBlock.module.scss
@@ -1,44 +1,45 @@
 @use '/src/styles/constants/colors';
 
 .infoBlock {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 0;
+  padding: 7px 0 7px 25px;
   margin-top: 13px;
   background: colors.$VEGAN_CARD_DARK;
   border-radius: 40px;
 
   .leftWing {
     display: flex;
+    flex-direction: column;
+    margin-left: 40px;
     overflow: hidden;
 
-    p {
-      padding: 5px 0;
-      margin-left: 10px;
-      font-size: 18px;
-      text-align: left;
-    }
-
     .infoImoji {
-      position: relative;
-      left: 5px;
-      width: 52px;
-      height: 52px;
-      margin-right: 10px;
+      position: absolute;
+      top: 5px;
+      left: 4px;
+      width: 50px;
+      height: 50px;
       font-size: 36px;
-      line-height: 52px;
+      line-height: 50px;
       vertical-align: middle;
       background: white;
       border-radius: 50%;
+    }
+
+    p {
+      padding-bottom: 5px;
+      text-align: left;
     }
   }
 
   .dietsWrapper {
     display: inline-flex;
-    // width: 100%;
-    // min-width: 180px;
-    // overflow: hidden;
+    width: 100%;
+    min-width: 180px;
+    overflow: hidden;
     cursor: grab;
 
     li {
@@ -50,10 +51,14 @@
   }
 
   a {
-    display: block;
     margin: 0 10px;
     font-size: 20px;
     font-weight: 700;
-    text-shadow: 2px 1px 1px colors.$VEGAN_BTN_BG;
+    text-shadow: 2px 1px 0 colors.$VEGAN_BTN_BG;
+
+    &:active {
+      color: colors.$VEGAN_OPPOSITE_YELLOW;
+      text-shadow: 2px 1px 0 colors.$BLACK;
+    }
   }
 }
