--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -28,3 +28,4 @@ $VEGAN_ETC: #f46278;
 $VEGAN_BTN_BG: #f0f8ff;
 $VEGAN_CARD_BG: #dedcff;
 $VEGAN_CARD_DARK: #9d98ff;
+$VEGAN_OPPOSITE_YELLOW: #faff99;
